# LLM_project

./: .env  JUSTFILE  __init__.py  app.py  config.py  logging_client.py  logging_config.py  logging_server.py  main.py  pyproject.toml  requirements.txt  st.py  xyz.py
agent/: __init__.py  executor.py  setup.py
data/: stock_data.csv
tools/: __init__.py  data_analysis.py  data_loading.py  quality_report.py  time_series.py  visualization.py
